--- a/src/components/CommentItem/index.css
+++ b/src/components/CommentItem/index.css
@@ -1,29 +1,83 @@
 .amber {
   background-color: #f59e0b;
+  border-radius: 50px;
 }
 
 .blue {
   background-color: #0b69ff;
+  border-radius: 50px;
 }
 
 .orange {
   background-color: #f97316;
+  border-radius: 50px;
 }
 
 .emerald {
   background-color: #10b981;
+  border-radius: 50px;
 }
 
 .teal {
   background-color: #14b8a6;
+  border-radius: 50px;
 }
 
 .red {
   background-color: #b91c1c;
+  border-radius: 50px;
 }
 
 .light-blue {
   background-color: #0ea5e9;
+  border-radius: 50px;
 }
 
 /* Write your CSS here */
+.comment-list {
+  list-style-type: none;
+}
+.comment-name-card {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+.first-letter {
+  padding: 5px;
+  margin: 10px;
+  text-align: center;
+  border-radius: 50px;
+}
+.name-of-commented {
+  margin-right: 20px;
+  margin-left: 20px;
+  color: #334155;
+}
+.comment-time {
+  color: #94a3b8;
+  font-size: 14px;
+}
+.comment-description {
+  color: #64748b;
+}
+.comment-button {
+  display: flex;
+  justify-content: space-between;
+}
+.like-image {
+  margin-right: 20px;
+}
+.button {
+  outline: none;
+  border: none;
+  color: #7e858e;
+}
+.button-active {
+  color: #0284c7;
+  border: none;
+  outline: none;
+}
+.delete-btn {
+  border: none;
+  outline: none;
+}
