--- a/src/components/Comments/index.css
+++ b/src/components/Comments/index.css
@@ -1,1 +1,59 @@
 /* Write your CSS here */
+.bg-container {
+  font-family: 'Roboto';
+  display: flex;
+  flex-direction: column;
+}
+.heading-text {
+  color: #1e293b;
+  margin-left: 50px;
+}
+.comment-input {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 30px;
+}
+.para-text {
+  margin-left: 30px;
+  color: #475569;
+  font-size: 15px;
+}
+.name-text {
+  margin-left: 30px;
+  padding: 10px;
+  width: 100%;
+}
+.comment-input {
+  padding: 10px;
+  width: 100%;
+}
+.add-button {
+  margin-left: 30px;
+  padding: 10px;
+  background-color: #0284c7;
+  color: #cbd2d9;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+}
+.comment-image {
+  margin-right: 30px;
+}
+.comment-line {
+  background-color: black;
+}
+.comment-count {
+  margin: 40px;
+}
+.total-comment {
+  background-color: #0284c7;
+  color: #cbd2d9;
+  padding: 8px;
+  border-radius: 5px;
+}
+.comment-container {
+  margin-left: 40px;
+  margin-right: 40px;
+  list-style-type: none;
+}
