--- a/src/components/CommentItem/index.css
+++ b/src/components/CommentItem/index.css
@@ -81,3 +81,17 @@
   border: none;
   outline: none;
 }
+@media screen and (min-width: 768px) {
+  .first-letter {
+    border-radius: 50px;
+    padding: 5px;
+    margin: 15px;
+  }
+  .name-of-commented {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .comment-time {
+    font-size: 13px;
+  }
+}
