--- a/src/components/CommentItem/index.css
+++ b/src/components/CommentItem/index.css
@@ -81,7 +81,7 @@
   border: none;
   outline: none;
 }
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
   .first-letter {
     border-radius: 50px;
     padding: 5px;
