--- a/src/components/Comments/index.css
+++ b/src/components/Comments/index.css
@@ -58,7 +58,7 @@
   list-style-type: none;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
   .comment-input {
     flex-direction: column;
     justify-content: center;
